tests/NormalTests/paczka1/fuzzy1/43818800.err
Error in line 2: A956 S34 67,2
Error in line 1: 0s6IQlEyez6 A956 60,9
Error in line 8: FsSLN A970 31,6
Error in line 30: FsSLN A970 91,4
Error in line 27: BrG A970 77,5
Error in line 34: A956 S34 64,13
Error in line 25: A956 S196 76,0
